--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,3 +75,12 @@ body {
   color: red;
   text-align: center;
 }
+
+.edit-button {
+  position: absolute;
+  top: 25px;
+  right: 105px;
+  border: 1px solid grey;
+  padding: 5px 15px;
+  background-color: lightseagreen;
+}
